--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^4.9.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-fbsdk": "^0.7.0"
+    "react-native-fbsdk": "^0.7.0",
+    "react-navigation": "^1.0.0-beta.29"
   }
 }
