--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   "dependencies": {
     "expo": "^23.0.4",
     "firebase": "^4.9.0",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-fbsdk": "^0.7.0",
-    "react-navigation": "^1.0.0-beta.29"
+    "react-navigation": "^1.0.0-beta.29",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-persist": "^5.6.10",
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1"
   }
 }
