--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^0.0.12",
     "expo": "^23.0.4",
     "firebase": "^4.9.0",
     "moment": "^2.20.1",
