--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-elements": "^0.19.0",
     "react-native-fbsdk": "^0.7.0",
     "react-navigation": "^1.0.0-beta.29",
     "react-redux": "^5.0.6",
