--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
     "jest-expo": "23.0.0",
     "react-native-scripts": "1.9.0",
     "react-test-renderer": "16.0.0"
@@ -13,7 +16,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "build-funcs": "babel firebaseFunctions --out-dir functions --presets=es2015 --copy-files --ignore firebaseFunctions/node_modules"
   },
   "jest": {
     "preset": "jest-expo"
@@ -22,6 +26,7 @@
     "@ptomasroos/react-native-multi-slider": "^0.0.12",
     "expo": "^23.0.4",
     "firebase": "^4.9.0",
+    "firebase-admin": "^5.9.0",
     "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
