--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.50.3",
     "react-native-elements": "^0.19.0",
     "react-native-fbsdk": "^0.7.0",
+    "react-native-gifted-chat": "^0.3.0",
     "react-navigation": "^1.0.0-beta.29",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
