--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,14 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "busboy": "^0.2.14",
+    "content-type": "^1.0.4",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-functions": "^0.8.1",
+    "raw-body": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
