--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-elements": "^0.19.0",
+    "react-native-expo-image-cache": "^2.0.2",
     "react-native-fbsdk": "^0.7.0",
     "react-native-gifted-chat": "^0.3.0",
     "react-navigation": "^1.0.0-beta.29",
