--- a/functions/package.json
+++ b/functions/package.json
@@ -1,14 +1,15 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint .",
-    "serve": "firebase serve --only functions",
-    "shell": "firebase experimental:functions:shell",
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase experimental:functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "main": "lib/index.js",
   "dependencies": {
     "body-parser": "^1.18.2",
     "busboy": "^0.2.14",
@@ -20,8 +21,8 @@
     "raw-body": "^2.3.2"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3"
   },
   "private": true
 }
