--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-collapsible": "^0.10.0",
     "react-native-elements": "^0.19.0",
     "react-native-expo-image-cache": "^2.0.2",
     "react-native-fbsdk": "^0.7.0",
     "react-native-gifted-chat": "^0.3.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-navigation": "^1.0.0-beta.29",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
