--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
     "busboy": "^0.2.14",
     "content-type": "^1.0.4",
     "cors": "^2.8.4",
+    "expo-server-sdk": "^2.3.3",
     "express": "^4.16.2",
     "firebase-admin": "~5.8.1",
     "firebase-functions": "^0.8.1",
