--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^0.0.12",
+    "axios": "^0.18.0",
     "expo": "^23.0.4",
     "firebase": "^4.9.0",
     "firebase-admin": "^5.9.0",
@@ -32,7 +33,7 @@
     "react-native": "0.50.3",
     "react-native-collapsible": "^0.10.0",
     "react-native-elements": "^0.19.0",
-    "react-native-expo-image-cache": "^2.0.2",
+    "react-native-expo-image-cache": "^3.0.1",
     "react-native-fbsdk": "^0.7.0",
     "react-native-gifted-chat": "^0.3.0",
     "react-native-keyboard-spacer": "^0.4.1",
