--- a/app.json
+++ b/app.json
@@ -8,10 +8,10 @@
     "version": "1.0",
     "orientation": "portrait",
     "primaryColor": "#F56705",
-    "icon": "https://firebasestorage.googleapis.com/v0/b/stagg-test.appspot.com/o/icons%2Fstagg_icon.png?alt=media&token=a521fae8-d25d-43c9-97e9-b2ad5366d85b",
+    "icon": "https://firebasestorage.googleapis.com/v0/b/stagg-cc356.appspot.com/o/icons%2Fstagg_pic_placeholder.png?alt=media&token=c67d5c97-ff95-4259-95e1-673c6e30f936",
     "notification": {
       "color": "#F56705",
-      "icon": "https://firebasestorage.googleapis.com/v0/b/stagg-test.appspot.com/o/icons%2Fstagg_icon_notification.png?alt=media&token=b67b0eed-accd-4325-806f-3c8b7ad35640" 
+      "icon": "https://firebasestorage.googleapis.com/v0/b/stagg-cc356.appspot.com/o/icons%2Fstagg_icon_notification.png?alt=media&token=61983c5f-f3fe-4f2f-b36c-1d296b5d17b7" 
     },
     "ios": {
       "bundleIdentifier": "org.stagg.exp"
